# avelio

backend/: .gitignore  Cargo.toml  build.rs  example.avelio.toml
backend/migrations/: 20211113150858_songs.sql  20211113151047_users.sql  20211113151048_playlist.sql  20211113151546_playlist_record.sql  20211113154637_subscriptions.sql
backend/src/: main.rs  settings.rs
backend/src/db/: mod.rs  playlist.rs  song.rs  user.rs
backend/src/routes/: auth.rs  auth_middleware.rs  mod.rs  playlist.rs  track.rs
backend/src/storage/: mod.rs
backend/src/utils/: hashing.rs  mod.rs  proto.rs
flutter/: .gitignore  .gitmodules  Cargo.toml  README.md  pubspec.yaml
flutter/android/: build.gradle  proguard-rules.pro
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/avelio/: MainActivity.kt
flutter/android/app/src/profile/: AndroidManifest.xml
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: app.dart  ffi.dart  home_observer.dart  main.dart
flutter/lib/home/cubit/: home_cubit.dart
flutter/lib/home/view/: home_page.dart  home_view.dart
flutter/linux/: CMakeLists.txt  my_application.cc
flutter/native/ffi/: .gitignore  pubspec.yaml
flutter/native/ffi/lib/: generated_bindings.dart  lib.dart
flutter/native/sdk/: binding.h  build.rs
flutter/native/sdk/src/: lib.rs  translation.rs  types.rs  utils.rs
flutter/web/: index.html  manifest.json
proto/: Cargo.toml  general.proto  mod.rs
proto/@deprecated/: upload.proto
proto/src/: prelude.rs
proto/src/types/: auth.rs  general.rs  mod.rs  playlists.rs  profile.rs
sdk/: .gitmodules  Cargo.toml
sdk/src/: auth.rs  lib.rs  track.rs  utils.rs
sdk/src/proto/: auth.proto  playlists.proto  profile.proto  track.proto
