[package]
name = "audio-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
sqlx = { version = "0.5.9", features = [ "postgres", "runtime-actix-rustls", "macros", "chrono", "uuid" ] }
prost = "0.8.0"
actix-web-httpauth = "0.6.0-beta.3"
actix-protobuf = "0.7.0-beta.2"
actix-multipart = "0.4.0-beta.7"
actix-files = "0.5.0"
jsonwebtoken = "7"
serde = { version = "1.0.130", features = ["derive"] }
actix = "0.12"
chrono = "0.4.19"
config = "0.11.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures-util = "0.3"
rust-argon2 = "0.8.3"
rand = "0.8.4"
log = "0.4.14"
env_logger = "0.9.0"
minio-rs = { path = "./minio-rs" }
thiserror = "1.0.30"


[dev-dependencies]
bytes = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
pretty_assertions = "1.0.0"
tokio = { version = "1.14.0", features = ["full"] }

[build-dependencies]
prost-build = "0.9.0"
