[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.47"
reqwest = { version = "0.11", features = ["multipart", "rustls-tls"], default-features = false }
bytes = "1.1.0"
prost = "0.8.0"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["full"] }

[build-dependencies]
prost-build = "0.9.0"
